tests/render/snapshots/render__pretty_print_snapshots__rule_parameter_with_regex.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "curl" (and (parameter ["X" "request"] (regex "^GET$")) (allow)))
── output ──
(rule "curl"
  (and (parameter ["X" "request"] (regex "^GET$")) (allow)))
