tests/render/snapshots/render__pretty_print_snapshots__rule_tail_authorise.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(rule "sudo" (tail (authorise)))
── output ──
(rule "sudo"
  (tail (authorise)))
