tests/render/snapshots/render__pretty_print_snapshots__safe_env_vars.snap
---
source: tests/pretty_print_snapshots.rs
expression: out
---
── input (width 80) ──
(safe-env-vars "HOME" "USER" "PATH")
── output ──
(safe-env-vars "HOME" "USER" "PATH")
